<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.lab02_interactive.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/combo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/combo1" />
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/removeCombo1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/remove"
                    android:layout_gravity="right|top"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/combo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/combo2" />
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/removeCombo2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/remove"
                    android:layout_gravity="right|top"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/combo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/combo3" />
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/removeCombo3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/remove"
                    android:layout_gravity="right|top"/>
            </FrameLayout>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/combo4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/combo4" />
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/removeCombo4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/remove"
                    android:layout_gravity="right|top"/>
            </FrameLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/combo5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/combo5" />
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/removeCombo5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/remove"
                    android:layout_gravity="right|top"/>
            </FrameLayout>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/combo6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/combo6" />
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/removeCombo6"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/remove"
                    android:layout_gravity="right|top"/>
            </FrameLayout>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/combo7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/combo7" />
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/removeCombo7"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/remove"
                    android:layout_gravity="right|top"/>
            </FrameLayout>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/combo8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/combo8" />
                <Button
                    android:onClick="getComboCount"
                    android:id="@+id/removeCombo8"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/remove"
                    android:layout_gravity="right|top"/>
            </FrameLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/tv_combo_context"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/quantity_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:text=""
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/tv_combo_price"
                        android:textAllCaps="true"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/price_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_combo_init_price"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="getComboCount"
                    android:text="@string/bag_xml" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:onClick="getComboCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/inside" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:onClick="getComboCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/outside" />
                </RadioGroup>

                <Button
                    android:id="@+id/order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:background="@android:color/holo_orange_light"
                    android:onClick="submit"
                    android:text="@string/order" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/holo_orange_light"
                    android:onClick="submit"
                    android:text="@string/cancel" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
